<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/orange"
    tools:context=".Activities.RecipeDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        app:title="@string/recipe_details"
        app:titleTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_meal_name"
                android:text="@string/recipe_name"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="8dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView_meal_source"
                android:text="@string/source"
                android:gravity="center"
                android:textStyle="italic"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="14sp"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView_meal_summary"
                android:text="@string/summary"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                android:maxLines="5"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView_meal_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/likes_zero"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                />

            <ImageView
                android:id="@+id/imageView_meal_image"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/recipe_name" />

            <TextView
                android:text="Instruction Steps"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:padding="8dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_instruction_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

            <TextView
                android:text="@string/similar_recipes"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:padding="8dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_meal_similar"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/ingredients"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:padding="8dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_meal_ingredients"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView_ready_in_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ready_in_minutes"
                android:padding="8dp" />

            <TextView
                android:id="@+id/textView_servings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/servings_placeholder"
                android:padding="8dp" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_product_matches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
